--- a/src/app/Components/details-restaurant-dashboard/details-restaurant-dashboard.component.html
+++ b/src/app/Components/details-restaurant-dashboard/details-restaurant-dashboard.component.html
@@ -1,7 +1,7 @@
 
 <div *ngIf="currentrestaurant" class="edit-form">
   <br><br>
-    <h4>{{currentrestaurant.restaurantName}} Restaurant</h4>
+    <h3 class="text-center">Update {{currentrestaurant.restaurantName}} Restaurant</h3>
    <br><br>
     <!--<form>-->
       <div class="form-group">
