--- a/src/app/Components/add-menu-dashboard/add-menu-dashboard.component.html
+++ b/src/app/Components/add-menu-dashboard/add-menu-dashboard.component.html
@@ -77,6 +77,7 @@
       </div>
       <div class="text-center">
         <button
+        [disabled]="(menuForm.invalid && clicked==false)"
           (click)="addMenu()"
           type="button"
           class="btn btn-primary btn-lg mb-5"
