--- a/src/app/Components/customers-dashboard/customers-dashboard.component.html
+++ b/src/app/Components/customers-dashboard/customers-dashboard.component.html
@@ -2,7 +2,7 @@
     <h2 style="color: #E5533A; margin-top: 20px;">Customer List</h2>
    <br><br>
  <div class="row justify-content-center">
-   <div class="col-8">
+   <div class="col-12 col-sm-12 col-md-9">
     <div style="overflow-x:auto;">
       <table class="table table-hover">
           <thead class="text-center" style="background-color: #E5533A; color: white;">
