--- a/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
+++ b/src/app/Components/show-restaurants-dashboard/show-restaurants-dashboard.component.html
@@ -2,14 +2,14 @@
 <div class="container">
 <h2 style="color: #E5533A; margin-top: 20px;">All Restaurants</h2>
 <br><br>
-<div class="list row">
+<div class="list row" *ngIf="currentrestaurant == undefined">
     <div class="col-md-12">
       <ul class="list-group">
         <li
           class="list-group-item"
           *ngFor="let rest of restaurantList; let i = index"
         >
-        <img [src]="rest.restaurantFeaturedPhotos" width="40px" height="40px"style="margin-right: 10px;">
+        <img [src]="rest.logo" width="40px" height="40px"style="margin-right: 10px;">
 
           {{ rest.restaurantName}} 
          <button (click)="setActiveRestaurant(rest, i)" class="badge badge-pill" style="float: right;border: none;">Show Restaurant Details</button>
