fix user address in resturant page

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -210,7 +210,7 @@
                               class="form-control validate"name="validate5"
                               #validate5="ngModel"
                               ngModel
-                              pattern="[Aa-Zz]"
+                              pattern=".{1,}"
                               placeholder="name"
                               required />
                       </div>
