--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -237,7 +237,7 @@
                               name="validate5"
                               #validate5="ngModel"
                               ngModel
-                              pattern="[Aa-Zz]"
+                              pattern=".{1,}"
                               placeholder="name"
                               required
                             />
