--- a/src/app/Components/delivery/delivery.component.html
+++ b/src/app/Components/delivery/delivery.component.html
@@ -1,10 +1,10 @@
 <app-header></app-header>
 <div class="container-fluid">
-    <div class="row">
-      <!-----------Left Side--------------------------->
-      <div class="col-sm-2 right-delivery" style="flex-wrap: wrap;">
-        <h4 style="padding-top: 15px;margin-bottom: 15%;" class="gray-col">{{'show result' | translate}}</h4>
-        <div style="float: left;">
+  <div class="row">
+    <!-----------Left Side--------------------------->
+    <div class="col-sm-2 right-delivery" style="flex-wrap: wrap;">
+      <h4 style="padding-top: 15px;margin-bottom: 15%;" class="gray-col">{{'show result' | translate}}</h4>
+      <div style="float: left;">
         <label class="switch">
           <input type="checkbox" #inputEl (change)="onChange(inputEl.checked)">
           <span class="slider round"></span>
@@ -12,42 +12,58 @@
       </div>
       <div>
         <p class="gray-col" style="font-size: 16px;padding-left: 40px;line-height: 1.5;">
-          {{'orderOnline' | translate}} 
+          {{'orderOnline' | translate}}
         </p>
       </div>
-          <hr>
-        
-          <input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'openNow'|translate}}</span>
-          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'promo'|translate}}</span>
-          <br><input type="checkbox" class="chkbox"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;"> {{'check' |translate}}</span>
-          <hr>
-          <h4 class="gray-col">{{'sortBy'|translate}}</h4><br>
-       <input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'popular' |translate}}</span>
-       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'rating' |translate}}</span>
-       <br><input type="radio" name="sort"><span  style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'Delivery Time' |translate}}</span>
-        <hr>
-    </div> 
-      <!-----------right Side--------------------------->
-      <div class="col-sm-10 ">
-        <h3 style="padding-top: 10px; padding-left: 16px;">{{'head delivery' | translate}} </h3>
+      <hr>
+
+      <input type="checkbox" class="chkbox"><span
+        style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'openNow'|translate}}</span>
+      <br><input type="checkbox" class="chkbox"><span
+        style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'promo'|translate}}</span>
+      <br><input type="checkbox" class="chkbox"><span style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">
+        {{'check' |translate}}</span>
+      <hr>
+      <h4 class="gray-col">{{'sortBy'|translate}}</h4><br>
+      <input type="radio" name="sort"><span
+        style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'popular' |translate}}</span>
+      <br><input type="radio" name="sort"><span
+        style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'rating' |translate}}</span>
+      <br><input type="radio" name="sort"><span
+        style="font-size: 18px;padding-left:10px ; padding-bottom: 60px;">{{'Delivery Time' |translate}}</span>
+      <hr>
+    </div>
+    <!-----------right Side--------------------------->
+    <div class="col-sm-10 ">
+      <h3 style="padding-top: 10px; padding-left: 16px;">{{'head delivery' | translate}} </h3>
       <img src="/assets/pic1.png" height="120px" width="260px">
       <p style="margin-left: 12%;">{{'all' | translate}}</p>
       <br><br>
       <h4>{{'restaurants' | translate}} <sub>({{number_of_restaurants}})</sub></h4><br>
-      <div class="row">
-        <div class="col-sm-4" style="margin-bottom: 30px;" *ngFor="let item of restaurantList">
+      <div class="row " *ngIf="lang == 'en';else delivery_ar">
+
+        <div class="col-sm-4 clickacble-card" style="margin-bottom: 30px;" *ngFor="let item of restaurantList">
           <img [src]="item.logo" (click)="goRestaurant(item.id)" width="100%" height="250px">
-          
           <img [src]="item.logo" width="40px" height="40px" style="float: left;margin-right: 6px;margin-top: 12px;">
-          <p class="paragraph">{{item.restaurantName}}</p> 
+          <p class="paragraph">{{item.restaurantName}}</p>
           <p class="aria_parag">{{item.restaurantType}}</p>
-          <ngb-rating [max]="5" [(rate)]="item.reviews" [readonly]="true"></ngb-rating>
-
+          <ngb-rating [max]="5" [(rate)]="item.rate" [readonly]="true"></ngb-rating>
         </div>
-    </div>
-</div>
+      </div>
+      <ng-template #delivery_ar>
+        <div class="row ">
+          <div class="col-sm-4 clickacble-card" style="margin-bottom: 30px;" *ngFor="let item of restaurantList">
+            <img [src]="item.logo" (click)="goRestaurant(item.id)" width="100%" height="250px">
 
+            <img [src]="item.logo" width="40px" height="40px" style="float: left;margin-right: 6px;margin-top: 12px;">
+            <p class="paragraph">{{item.restaurantName_ar}}</p>
+            <p class="aria_parag">{{item.restaurantType_ar}}</p>
+            <ngb-rating [max]="5" [(rate)]="item.rate" [readonly]="true"></ngb-rating>
+          </div>
+        </div>
+      </ng-template>
+    </div>
+
+  </div>
+  <app-footer></app-footer>
 </div>
-<app-footer></app-footer>
-</div>
-    
