--- a/src/app/Components/searchdetails/searchdetails.component.html
+++ b/src/app/Components/searchdetails/searchdetails.component.html
@@ -1,24 +1,52 @@
-<div id="resturant-card" class="container resturant-card">
-    <div class="card clickable-card">
-      <div id="demo">
-        <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}">
-      </div>
-      <div class="card-body">
-        <p class="paragraph">{{selectedResturant.restaurantName}}</p>
-        <img src="{{selectedResturant.logo}}" width="40px" height="40px"
-          style="float: left;margin-right: 6px;">
-        <p class="aria_parag">{{selectedResturant.restaurantType}}</p>
-        <ngb-rating [max]="5" [rate]="selectedResturant.rate"  [readonly]="true"></ngb-rating>
-      </div>
-      <div class="card-footer">
-        <div class="row">
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <span style="color: green; font-size: small;"> <img src="../../../assets/images/check-mark-circle.svg"> order online</span>
-          </div>
-          <div class="col-sm-6 col-md-6 col-lg-6">
-            <span style="color: darkorange; font-size: small;"><i class="fas fa-map-marked-alt" style="color: darkorange;"></i> Live Tracking</span>
-          </div>
+
+
+<div id="resturant-card" class="container resturant-card" *ngIf="lang == 'en';else search_ar">
+  <div class="card clickable-card">
+    <div id="demo">
+      <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}">
+    </div>
+    <div class="card-body">
+      <p class="paragraph">{{selectedResturant.restaurantName}}</p>
+      <img src="{{selectedResturant.logo}}" width="40px" height="40px" style="float: left;margin-right: 6px;">
+      <p class="aria_parag">{{selectedResturant.restaurantType}}</p>
+      <ngb-rating [max]="5" [rate]="selectedResturant.rate" [readonly]="true"></ngb-rating>
+    </div>
+    <div class="card-footer">
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <span style="color: green; font-size: small;"> <img src="../../../assets/images/check-mark-circle.svg">
+            {{'orderOnlineCard' | translate}}</span>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <span style="color: darkorange; font-size: small;"><i class="fas fa-map-marked-alt"
+              style="color: darkorange;"></i> {{'liveTrack'| translate}} </span>
         </div>
       </div>
     </div>
   </div>
+</div>
+
+<ng-template #search_ar>
+  <div class="card clickable-card">
+    <div id="demo">
+      <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}">
+    </div>
+    <div class="card-body">
+      <p class="paragraph">{{selectedResturant.restaurantName_ar}}</p>
+      <img src="{{selectedResturant.logo}}" width="40px" height="40px" style="float: left;margin-right: 6px;">
+      <p class="aria_parag">{{selectedResturant.restaurantType_ar}}</p>
+      <ngb-rating [max]="5" [rate]="selectedResturant.rate" [readonly]="true"></ngb-rating>
+    </div>
+    <div class="card-footer">
+      <div class="row">
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <span style="color: green; font-size: small;"> <img src="../../../assets/images/check-mark-circle.svg">{{'orderOnlineCard' | translate}} </span>
+        </div>
+        <div class="col-sm-6 col-md-6 col-lg-6">
+          <span style="color: darkorange; font-size: small;"><i class="fas fa-map-marked-alt"
+              style="color: darkorange;"></i>{{'liveTrack'| translate}}</span>
+        </div>
+      </div>
+    </div>
+  </div>
+</ng-template>
