--- a/src/app/Components/admin-login/admin-login.component.html
+++ b/src/app/Components/admin-login/admin-login.component.html
@@ -24,7 +24,7 @@
 
                 <div class="form-group">
                   <label>Password</label>
-                  <input #password 
+                  <input #password type="password"
                   class="form-control" name="validate2"
                   formControlName="pass"           
                    placeholder="Enter password"
