--- a/src/app/Components/searchdetails/searchdetails.component.html
+++ b/src/app/Components/searchdetails/searchdetails.component.html
@@ -27,7 +27,7 @@
 </div>
 
 <ng-template #search_ar>
-  <div class="card clickable-card">
+  <div class="card clickable-card resturant-card">
     <div id="demo">
       <img class="d-block w-100" height="250px" src="{{selectedResturant.logo}}">
     </div>
