--- a/src/app/Components/add-menu-dashboard/add-menu-dashboard.component.html
+++ b/src/app/Components/add-menu-dashboard/add-menu-dashboard.component.html
@@ -3,51 +3,97 @@
     <fieldset>
       <legend class="jumbotron text-center"><h2>Add New Menu</h2></legend>
       
-            <div class="form-group">
-              <label for="dishSize">Select Restaurant</label>
-              <select [(ngModel)]="selectedRestID" formControlName="restId" class="form-control">
-                <option *ngFor="let item of restaurantsList" value="{{item.id}}">{{item.restaurantName}}</option>
-              </select>
-            </div>
-      <div class="form-group">
-        <label for="dishName">Dish Name</label>
-        <input
-          formControlName="dishName"
-          type="text"
-          class="form-control"
-          id="dishName"
-          placeholder="Enter Dish Name"
-        />
-      </div>
-      <div class="form-group">
-        <label for="dishPrice">Dish Price</label>
-        <input
-          formControlName="dishPrice"
-          type="text"
-          class="form-control"
-          id="dishPrice"
-          placeholder="Enter Dish Price"
-        />
-      </div>
-      <div class="form-group">
-        <label for="dishSize">Dish Size</label>
-        <input
-          formControlName="dishSize"
-          type="text"
-          class="form-control"
-          id="dishSize"
-          placeholder="Enter Dish Size"
-        />
+      <div class="row">
+        <div class="form-group col-sm-12">
+          <label for="dishSize">Select Restaurant</label>
+          <select [(ngModel)]="selectedRestID" formControlName="restId" class="form-control">
+            <option *ngFor="let item of restaurantsList" value="{{item.id}}">{{item.restaurantName}}</option>
+          </select>
+        </div>
+
       </div>
 
-      <div class="form-group">
-        <label for="dishDescription">Dish Description</label>
-        <textarea
-          formControlName="dishDescription"
-          class="form-control"
-          id="dishDescription"
-          rows="3"
-        ></textarea>
+            <div class="row">
+              <div class="form-group col-sm-6">
+                <label for="dishName">English Dish Name</label>
+                <input
+                  formControlName="dishName"
+                  type="text"
+                  class="form-control"
+                  id="dishName"
+                  placeholder="Enter Dish Name"
+                />
+              </div>
+
+              <div class="form-group col-sm-6">
+                <label for="dishName">Arabic Dish Name</label>
+                <input
+                  formControlName="dishName_ar"
+                  type="text"
+                  class="form-control"
+                  id="dishName"
+                  placeholder="اسم الطبق باللغة العربية"
+                />
+              </div>
+            </div>
+      
+      <div class="row">
+        <div class="form-group col-sm-12">
+          <label for="dishPrice">Dish Price</label>
+          <input
+            formControlName="dishPrice"
+            type="text"
+            class="form-control"
+            id="dishPrice"
+            placeholder="Enter Dish Price"
+          />
+        </div>
+      </div>
+      
+      <div class="row"> 
+        <div class="form-group col-sm-6">
+          <label for="dishSize">English Dish Size</label>
+          <input
+            formControlName="dishSize"
+            type="text"
+            class="form-control"
+            id="dishSize"
+            placeholder="Enter Dish Size"
+          />
+        </div>
+        <div class="form-group col-sm-6">
+          <label for="dishSize">Arabic Dish Size</label>
+          <input
+            formControlName="dishSize_ar"
+            type="text"
+            class="form-control"
+            id="dishSize"
+            placeholder="الحجم باللغة العربية"
+          />
+        </div>
+    
+      </div>
+      
+
+      <div class="row">
+        <div class="form-group col-sm-6">
+          <label for="dishDescription">English Dish Description</label>
+          <textarea
+            formControlName="dishDescription"
+            class="form-control"
+            id="dishDescription"
+            rows="3"
+          ></textarea>
+        </div>
+        <div class="form-group col-sm-6">
+          <label for="dishDescription">Arabic Dish Description</label>
+          <textarea
+            formControlName="dishDescription_ar"
+            class="form-control"
+            id="dishDescription"
+            rows="3"
+          ></textarea>
+        </div>
       </div>
 
       <div class="form-group col-12">
