--- a/src/app/Components/details-restaurant-dashboard/details-restaurant-dashboard.component.html
+++ b/src/app/Components/details-restaurant-dashboard/details-restaurant-dashboard.component.html
@@ -6,7 +6,7 @@
     <!--<form>-->
     <form [formGroup]="restForm" (ngSubmit)="updateRestaurant()">
       <div class="form-group">
-        <label for="title">restaurantName</label>
+        <label for="title">English Restaurant Name</label>
         <input
          
           type="text"
@@ -17,6 +17,18 @@
         />
       </div>
       <div class="form-group">
+        <label for="title">Arabic Restaurant Name</label>
+        <input
+         
+          type="text"
+          class="form-control"
+          id="title"
+          formControlName="restaurantname_ar"
+          [(ngModel)]="currentrestaurant.restaurantName_ar"
+        />
+      </div>
+
+      <div class="form-group">
         <h6>Restaurant Branches</h6>
         <select name="category" class="form-control">
           <option *ngFor="let rest of currentrestaurant.restaurantBranchs" >{{rest}}</option>
@@ -24,7 +36,7 @@
       </div>
 
       <div class="form-group">
-        <label for="title">restaurantAddress</label>
+        <label for="title">English Restaurant Address</label>
         <input
          
           type="text"
@@ -32,6 +44,19 @@
           id="title"
           formControlName="restaddres"
           [(ngModel)]="currentrestaurant.adress"
+        
+        />
+      </div>
+
+      <div class="form-group">
+        <label for="title">Arabic Restaurant Address</label>
+        <input
+         
+          type="text"
+          class="form-control"
+          id="title"
+          formControlName="restAddres_ar"
+          [(ngModel)]="currentrestaurant.adress_ar"
         
         />
       </div>
@@ -77,7 +102,7 @@
       </div>
 
       <div class="form-group">
-        <label for="description">restaurantType</label>
+        <label for="description">English Restaurant Type</label>
         <input
           
           type="text"
@@ -88,7 +113,21 @@
           [(ngModel)]="currentrestaurant.restaurantType"
          
         />
-      </div>     
+      </div>    
+      
+      <div class="form-group">
+        <label for="description">Arabic Restaurant Type</label>
+        <input
+          
+          type="text"
+          class="form-control"
+          id="description3"
+          formControlName="restType_ar"
+          name="description"
+          [(ngModel)]="currentrestaurant.restaurantType_ar"
+         
+        />
+      </div>  
     <!--</form>--> 
     
    <button class="btn btn-danger mr-2" (click)="deleteRestaurant()">
