--- a/src/app/Components/searchdetails/searchdetails.component.scss
+++ b/src/app/Components/searchdetails/searchdetails.component.scss
@@ -4,6 +4,7 @@
 .resturant-card{
     margin-bottom: 15px;
     border-radius: 10px;
+    margin-top: 10px;
 }
 .rest-logo-image{
     border-radius: 5px;
